--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
+    "@thirdweb-dev/react": "^3.3.0",
+    "@thirdweb-dev/sdk": "^3.3.0",
+    "ethers": "^5.7.2",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-spinners": "^0.13.6"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
